fix some movments and add graphics

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         }
     </style>
 </head>
-<body class="flex justify-center items-center h-full">
+<body class="flex flex-col justify-center items-center h-full">
+    <div>
+        <h1 id="playerHealth">
+        </h1>
+        <h1 id="enemyHealth">
+        </h1>
+    </div>
     <canvas id="gameCanvas"></canvas>
     <script src="game.js" type="module"></script>
     <script src="https://cdn.tailwindcss.com/?plugins=forms,typography,aspect-ratio,line-clamp"></script>
