--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="bg-black bg-cover absolute z-0 w-[110%] h-[110%] blur opacity-50 test">
     </div>
-    <div class="flex top-[800px] left-[25%] absolute z-50 gap-20">
+    <div class="flex top-[800px] left-1/2 transform -translate-x-1/2 absolute z-50 gap-20">
         <div class="flex flex-col gap-2  text-center items-center">
             <div>
                 <div class="w-8 h-8 rounded bg-white button" data-value="KeyW">W</div>
