--- a/index.html
+++ b/index.html
@@ -40,9 +40,17 @@
 </head>
 
 <body class="flex flex-col justify-center blur-none items-center h-full relative filter-none">
-    <div class="bg-[url('/models/kood-bg2.png')] bg-cover absolute z-0 w-[120%] h-[120%] blur">
+    <div class="bg-[url('/models/kood-final.png')] bg-cover absolute z-0 w-[120%] h-[120%] blur">
     </div>
     <div class="bg-black bg-cover absolute z-0 w-[110%] h-[110%] blur opacity-50 test">
+    </div>
+    <div class="absolute">
+        <div>
+
+        </div>
+        <div>
+            
+        </div>
     </div>
     <div class="flex top-[800px] left-1/2 transform -translate-x-1/2 absolute z-50 gap-20">
         <div class="flex flex-col gap-2  text-center items-center">
