--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body class="flex flex-col justify-center blur-none items-center h-full relative filter-none">
-    <div class="bg-[url('/models/kood-final.png')] bg-cover absolute z-0 w-[120%] h-[120%] blur">
+    <div class="bg-[url('/models/kood-final2.png')] bg-cover absolute z-0 w-[120%] h-[120%] blur">
     </div>
     <div class="bg-black bg-cover absolute z-0 w-[110%] h-[110%] blur opacity-50 test">
     </div>
