--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenobi: Wars of Ida-Virumaa</title>
-    <link rel="icon" type="image/x-icon" href="./models/images.png">
+    <link rel="icon" type="image/x-icon" href="https://pr22nik23.github.io/models/images.png">
     <style>
         canvas {
             display: block;
@@ -41,7 +41,7 @@
 </head>
 
 <body class="flex flex-col justify-center blur-none items-center h-full relative filter-none">
-    <div class="bg-[url('https://pr22nik23.github.io/models/kood-final2.png')] bg-cover absolute z-0 w-[120%] h-[120%] blur">
+    <div class="bg-[url('/models/kood-final2.png')] bg-cover absolute z-0 w-[120%] h-[120%] blur">
     </div>
     <div class="bg-black bg-cover absolute z-0 w-[110%] h-[110%] blur opacity-50 test">
     </div>
