--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         @font-face {
             font-family: 'CustomFont';
-            src: url('assets/ThaleahFat.ttf') format('truetype');
+            src: url('./assets/ThaleahFat.ttf') format('truetype');
         }
 
         body {
@@ -41,7 +41,7 @@
 </head>
 
 <body class="flex flex-col justify-center blur-none items-center h-full relative filter-none">
-    <div class="bg-[url('https://pr22nik23.github.io/models/kood-final2.png')] bg-cover absolute z-0 w-[120%] h-[120%] blur">
+    <div class="bg-[url('./models/kood-final2.png')] bg-cover absolute z-0 w-[120%] h-[120%] blur">
     </div>
     <div class="bg-black bg-cover absolute z-0 w-[110%] h-[110%] blur opacity-50 test">
     </div>
