--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenobi: Wars of Ida-Virumaa</title>
-    <link rel="icon" type="image/x-icon" href="https://pr22nik23.github.io/models/images.png">
+    <link rel="icon" type="image/x-icon" href="/models/images.png">
     <style>
         canvas {
             display: block;
