--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div>
                 <h1 class="text-3xl text-white text-center">
-                    Jump
+                    Attack
                 </h1>
             </div>
         </div>
