--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     </div>
     <div class="bg-black bg-cover absolute z-0 w-[110%] h-[110%] blur opacity-50 test">
     </div>
+    <div class="absolute z-50 left-1/2 -translate-x-1/2 top-[10%]">
+        <h1 class="text-3xl text-white">
+            Try to reach level 10!
+        </h1>
+    </div>
     <div class="finish absolute flex flex-col w-[400px] rounded-xl h-[200px] top-1/2 left-1/2 text-white -translate-x-1/2 z-50 -translate-y-1/2 bg-black/70 justify-center items-center text-3xl hidden">
         <p class="kills ">
             Kills: 1000
